--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is a C program (and hopefully a library eventually) that allows a user to create and run a neural network for numerical data. It is written in C, and uniquely, it supports complex numbers to be used in calculations and data. 
 
-This is not meant for professional use. It's being written as an experiment and a way for the author to familiarize himself with larger projects and C. It is currently not usable as anything other than a test suite, and is a work in progress.
+This is not currently meant for full use. It's being written as an experiment and a way to familiarize myself with larger projects and C. It is currently not usable as a full neural network, and is a work in progress.
 
 This software is licensed under the 3-clause BSD License (see LICENSE). 
